# tket

./: build-without-conan.md
.github/workflows/: build-without-conan.yml  build_and_test.yml  build_libs.yml  build_pytket_docs.yml  coverage.yml  docs.yml  issue-to-project.yml  lint.yml  linuxbuildcapi  pytket_benchmarking.yml  release.yml  test_libs.yml  test_libs_all.yml  valgrind.yml
conan-profiles/: windows-2025-vs2026
docs/pytket/test-coverage/: class_index.html  cov.xml  function_index.html  index.html  status.json  z_08012a006a76c21d___init___py.html  z_1272d75e06ac4ded___init___py.html  z_17ad98c36267126a___init___py.html  z_233a074811efd0b8___init___py.html  (+61 more)
libs/tkassert/: conanfile.py
libs/tklog/: conanfile.py
libs/tkrng/: conanfile.py
libs/tktokenswap/: conanfile.py
libs/tkwsm/: conanfile.py
pytket/: CMakeLists.txt  conanfile.py  ruff.toml  setup.py
pytket/binders/: architecture.cpp  circuit_library.cpp  mapping.cpp  partition.cpp  passes.cpp  pauli.cpp  placement.cpp  predicates.cpp  tableau.cpp  tailoring.cpp  transform.cpp  unitid.cpp  utils_serialization.cpp
pytket/docs/: README.md  changelog.md  circuit.md  extensions.md  faqs.md  justfile  passes.md  pyproject.toml
pytket/pytket/: __init__.py
pytket/stub_generation/: regenerate_stubs  stubgen.py
pytket/tests/: classical_test.py  compilation_test.py  transform_test.py
tket/: CMakeLists.txt  conanfile.py
tket-c-api/: CMakeLists.txt
tket-c-api/src/: tket-c-api.cpp
tket-c-api/test_package/: CMakeLists.txt
tket/test/: CMakeLists.txt
tket/test_package/: CMakeLists.txt
(+3247 files in other folders)
